--- a/src/style/partials/_share.scss
+++ b/src/style/partials/_share.scss
@@ -20,7 +20,7 @@
                 span {
                     font-size: 20px;
                     margin-left: 10px;
-                }
+                }                
             }
         }
         &:last-of-type {
@@ -29,6 +29,9 @@
                 margin: 0 10px;
                 display: inline-block;
                 align-content: center;
+                &:hover {
+                    cursor: pointer;
+                }
             }
         }        
     }
